# payment-receipt-generator

./: .gitignore  .replit  CLAUDE.md  README.md  app.py  main.py  payment-receipt-generator.py  pyproject.toml  replit.md
.claude/memory/: patterns.md
src/: app.js  index.html  styles.css
static/: app.js  style.css
templates/: index.html
